# vae_investigations

./: .gitignore  README.md  main.py  pyproject.toml  understanding_vae.ipynb  vae_CNN.ipynb  vae_fcn.ipynb
